# ai-agent

./: README.md  pyproject.toml
ai_agent/: __init__.py  cli.py
ai_agent/core/: __init__.py  agent.py  config.py
ai_agent/output/: __init__.py  base.py  conversation.py  terminal.py
ai_agent/plugins/: __init__.py  base.py  translator.py
ai_agent/providers/: __init__.py  ark.py  base.py  deepseek.py  openai.py  sustech.py
docs/: development.md
tests/: __init__.py  test_agent.py  test_ark_provider.py  test_config.py  test_conversation_output.py  test_output.py  test_plugins.py  test_providers.py  test_sustech_provider.py
